# dspy-ollama-prompting

./: README.md  pyproject.toml
dspy_ollama_example/: GenerateAnswer.py  MultiHopQA.py  TextExtraction.py  __main__.py
