[tool.poetry]
name = "dspy-ollama-example"
version = "0.1.0"
description = ""
authors = ["Chanon Roy <chanonroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dspy = "^0.1.4"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
